{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 9,
  "lineage": "c18ab3b8-d566-d995-40b3-b9903dfcf0f5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "que_creamos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:012744361756:security-group/sg-0ba47765d97b963b5",
            "description": "launch-wizard-3 created 2022-06-08T14:27:52.916Z",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sg-creado-manualmente"
                ]
              }
            ],
            "id": "sg-0ba47765d97b963b5",
            "name": "launch-wizard-3",
            "tags": {
              "Name": "sg-creado-manualmente"
            },
            "vpc_id": "vpc-03ce6163fca1e01d0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "por_defecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:012744361756:subnet/subnet-0e4a3f8e8b866a53e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "subred-default-1"
                ]
              }
            ],
            "id": "subnet-0e4a3f8e8b866a53e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "012744361756",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "subred-default-1"
            },
            "vpc_id": "vpc-03ce6163fca1e01d0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "por_defecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:012744361756:vpc/vpc-03ce6163fca1e01d0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04e4ed55db8e7e130",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-092b95e90db4837d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03ce6163fca1e01d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e24785d6e8017dbc",
            "owner_id": "012744361756"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a21d1c76ac56fee7",
            "arn": "arn:aws:ec2:eu-west-3:012744361756:instance/i-01238594a6f96f8a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01238594a6f96f8a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "llave-wsl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8545fe6068e9700",
            "private_dns": "ip-172-31-16-59.eu-west-3.compute.internal",
            "private_ip": "172.31.16.59",
            "public_dns": "ec2-15-237-25-103.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.25.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e2acf2236db4f8c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "launch-wizard-3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4a3f8e8b866a53e",
            "tags": {
              "Name": "servidor1"
            },
            "tags_all": {
              "Name": "servidor1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba47765d97b963b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.llave_wsl",
            "data.aws_security_group.que_creamos",
            "data.aws_subnet.por_defecto",
            "data.aws_vpc.por_defecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a21d1c76ac56fee7",
            "arn": "arn:aws:ec2:eu-west-3:012744361756:instance/i-037ee4d0b5cd19026",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037ee4d0b5cd19026",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "llave-wsl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-036c763d5a1abbbf1",
            "private_dns": "ip-172-31-18-79.eu-west-3.compute.internal",
            "private_ip": "172.31.18.79",
            "public_dns": "ec2-15-237-24-254.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.24.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02825a6f32977f8a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "launch-wizard-3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4a3f8e8b866a53e",
            "tags": {
              "Name": "servidor2"
            },
            "tags_all": {
              "Name": "servidor2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba47765d97b963b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.llave_wsl",
            "data.aws_security_group.que_creamos",
            "data.aws_subnet.por_defecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a21d1c76ac56fee7",
            "arn": "arn:aws:ec2:eu-west-3:012744361756:instance/i-0cf2c66e2388812c1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf2c66e2388812c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "llave-wsl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091a80a651c04e85c",
            "private_dns": "ip-172-31-19-9.eu-west-3.compute.internal",
            "private_ip": "172.31.19.9",
            "public_dns": "ec2-15-237-82-44.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.82.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073a5e4ca2be423a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "launch-wizard-3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4a3f8e8b866a53e",
            "tags": {
              "Name": "servidor3"
            },
            "tags_all": {
              "Name": "servidor3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba47765d97b963b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.llave_wsl",
            "data.aws_security_group.que_creamos",
            "data.aws_subnet.por_defecto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "conexion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3502205310",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ba47765d97b963b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.que_creamos",
            "data.aws_vpc.por_defecto"
          ]
        }
      ]
    }
  ]
}